[gd_scene load_steps=2 format=3 uid="uid://ch4ecmb0t6je5"]

[ext_resource type="Script" path="res://NodeChat/welcome/script/file_system.gd" id="1_4n2lk"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_4n2lk")

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.09
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -0.320004
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.09
offset_bottom = -0.320004
grow_horizontal = 2

[node name="refresh_file" type="Button" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 10
text = "刷新节点集"

[node name="load_file" type="Button" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
text = "加载节点集"

[node name="add_file" type="Button" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
text = "创建节点集"

[connection signal="pressed" from="HBoxContainer/refresh_file" to="." method="_on_refresh_file_pressed"]
[connection signal="pressed" from="HBoxContainer/load_file" to="." method="_on_load_file_pressed"]
[connection signal="pressed" from="HBoxContainer/add_file" to="." method="_on_add_file_pressed"]
